--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -1,16 +1,18 @@
 :root {
+/* Neutral Colors */
     --primary-color1: hsl(35, 77%, 62%);
     --primary-color2: hsl(5, 85%, 63%);
     --off-white: hsl(36, 100%, 99%);
     --grayish-blue: hsl(233, 8%, 79%);
     --dark-grayish-blue: hsl(236, 13%, 42%);
     --very-dark-blue: hsl(240, 95%, 7%);
-    --button-organe: #f15d51;
-    --new-yellow: #f9a84c;
+/* Primary Colors */
+    --soft-red: hsl(5, 85%, 63%);
+    --soft-orange: hsl(35, 77%, 62%);
 }
 
-/* General CSS */
 
+/* General CSS */
 * {
     font-family: 'Inter', sans-serif;
 }
@@ -28,13 +30,10 @@ a {
 .grand-wrapper {
     max-width: 1440px;
 }
-
 /* End */
 
-
-
+/* Desktop Styles */
 /* Header CSS */
-
 .main-header {
     display: flex;
     justify-content: space-between;
@@ -62,12 +61,12 @@ a {
 }
 
 .items-list > li :active {
-    color: var(--button-organe);
+    color: var(--soft-red);
 }
 
 
 .items-list > li :focus {
-    color: var(--button-organe);
+    color: var(--soft-red);
 }
 
 .mobile-burger-menu {
@@ -79,7 +78,7 @@ a {
 
 .mobile-burger-menu.active {
     right: 0;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     position: fixed;
 }
 
@@ -97,14 +96,12 @@ a {
 .mobile-overlay.active {
     transform: translate(0px);
 }
-
 /* End */
 
 
 
 
-/* Up wrapper CSS */
-
+/* UpperWrapper CSS */
 .up-wrapper {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -146,7 +143,7 @@ a {
     margin: 1rem 0 0;
     padding: 0.8rem 2rem;
     border: none;
-    background-color: var(--button-organe);
+    background-color: var(--soft-red);
      cursor: pointer;
     }
 
@@ -160,7 +157,7 @@ a {
 }
 
 .up-wrapper-card2 > h1 {
-    color: var(--new-yellow);
+    color: var(--soft-orange);
     margin: 1rem;
 }
 
@@ -174,19 +171,17 @@ a {
 }
 
 .up-wrapper-card2-child > a :active {
-    color: var(--new-yellow);
+    color: var(--soft-orange);
 }
 
 .up-wrapper-card2-child > p {
     color: var(--grayish-blue);
     margin-bottom: 2rem;
 }
-
 /* End */
 
 
-/* Low wrapper CSS */
-
+/* LowWrapper CSS */
 .low-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -224,15 +219,13 @@ a {
 .low-wrapper-card-content > p {
 margin: 0;
 }
-
 /* End */
 
 
-
+ /* Mobile Styles */
 @media (max-width:375px) {
 
     /* Header */
-
     .items-list {
         display: none;
     }
@@ -257,8 +250,7 @@ margin: 0;
     /* End */
 
 
-/* Up-wrapper */
-
+/* UpperWrapper */
     .up-wrapper {
         display: flex;
         flex-direction: column;
@@ -281,7 +273,7 @@ margin: 0;
     /* End */
 
 
-    /* Low-Wrapper  */
+    /* LowWrapper  */
     .low-wrapper {
         display: flex;
         flex-direction: column;
